samples/_failures_safe/1761509624_12e9b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80a70bcb.c:168:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  168 | void print_state
      | ^~~~
